--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -637,12 +637,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 788,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number</th>\n",
+       "      <th>num_part_types</th>\n",
+       "      <th>num_parts</th>\n",
+       "      <th>parts_weight_inv</th>\n",
+       "      <th>num_missing_parts</th>\n",
+       "      <th>pct_missing_parts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>75821-1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>86</td>\n",
+       "      <td>85.770</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.023256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>41504-1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>53</td>\n",
+       "      <td>31.850</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>8838-1</td>\n",
+       "      <td>67</td>\n",
+       "      <td>295</td>\n",
+       "      <td>276.105</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>10740-1</td>\n",
+       "      <td>73</td>\n",
+       "      <td>118</td>\n",
+       "      <td>164.040</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.067797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>7731-1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>76</td>\n",
+       "      <td>72.100</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.013158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6975</td>\n",
+       "      <td>7754-1</td>\n",
+       "      <td>266</td>\n",
+       "      <td>833</td>\n",
+       "      <td>977.715</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.007203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6976</td>\n",
+       "      <td>10069-1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>35</td>\n",
+       "      <td>34.400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6977</td>\n",
+       "      <td>20200-1</td>\n",
+       "      <td>79</td>\n",
+       "      <td>185</td>\n",
+       "      <td>157.110</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.010811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6978</td>\n",
+       "      <td>6918-1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>106</td>\n",
+       "      <td>73.720</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.018868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6979</td>\n",
+       "      <td>10012-1</td>\n",
+       "      <td>17</td>\n",
+       "      <td>42</td>\n",
+       "      <td>83.660</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6980 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       number  num_part_types  num_parts  parts_weight_inv  num_missing_parts  \\\n",
+       "0     75821-1              63         86            85.770                2.0   \n",
+       "1     41504-1              25         53            31.850                0.0   \n",
+       "2      8838-1              67        295           276.105                0.0   \n",
+       "3     10740-1              73        118           164.040                8.0   \n",
+       "4      7731-1              45         76            72.100                1.0   \n",
+       "...       ...             ...        ...               ...                ...   \n",
+       "6975   7754-1             266        833           977.715                6.0   \n",
+       "6976  10069-1               9         35            34.400                0.0   \n",
+       "6977  20200-1              79        185           157.110                2.0   \n",
+       "6978   6918-1              63        106            73.720                2.0   \n",
+       "6979  10012-1              17         42            83.660                0.0   \n",
+       "\n",
+       "      pct_missing_parts  \n",
+       "0              0.023256  \n",
+       "1              0.000000  \n",
+       "2              0.000000  \n",
+       "3              0.067797  \n",
+       "4              0.013158  \n",
+       "...                 ...  \n",
+       "6975           0.007203  \n",
+       "6976           0.000000  \n",
+       "6977           0.010811  \n",
+       "6978           0.018868  \n",
+       "6979           0.000000  \n",
+       "\n",
+       "[6980 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 788,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_sets_inventory = pd.read_csv('sets-bricklink-inventory-derived.csv')\n",
-    "df_sets_inventory['parts_weight_inv'] = df_sets_inventory['parts_weight']"
+    "df_sets_inventory = df_sets_inventory.rename(columns={'parts_weight': 'parts_weight_inv'})\n",
+    "df_sets_inventory"
    ]
   },
   {
