--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -5868,8 +5868,8 @@
     "- Compare the distrubtions of parts in sets over the years.\n",
     "- Maybe make log buckets. Graph will be histogram.\n",
     "- Have histogram with buckets representing number of parts in each bucket. This can be done with rebrickable data.\n",
-    "- Group by part number or mould num for each year, sum quantity from the inventory\n",
-    "- "
+    "- Group by part number or mould number for each year, sum quantity from the inventory\n",
+    "- For each year, make a histogram"
    ]
   },
   {
